<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

   <EditText
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:hint="@string/app_zip_code"
       tools:ignore="MissingConstraints"
       android:inputType="number"
       android:maxLength="5"
       android:id="@+id/zip_et"/>

        <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/app_run"
        tools:ignore="MissingConstraints"
        android:id="@+id/run_btn"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/id_latlon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/first_hour_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_hour"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_hour_tv"
                android:text="@string/empty"
                android:textStyle="bold"
                android:id="@+id/first_hour_desc_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_below="@id/first_hour_desc_tv"
                android:textStyle="bold"
                android:id="@+id/first_hour_temp_tv"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/first_hour_temp_tv"
                android:id="@+id/first_hour_iv" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_hour"
                android:textStyle="bold"
                android:id="@+id/second_hour_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_hour_tv"
                android:text="@string/empty"
                android:textStyle="bold"
                android:id="@+id/second_hour_desc_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_below="@id/second_hour_desc_tv"
                android:textStyle="bold"
                android:id="@+id/second_hour_temp_tv"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/second_hour_temp_tv"
                android:id="@+id/second_hour_iv" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_hour"
                android:textStyle="bold"
                android:id="@+id/third_hour_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/third_hour_tv"
                android:text="@string/empty"
                android:textStyle="bold"
                android:id="@+id/third_hour_desc_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_below="@id/third_hour_desc_tv"
                android:textStyle="bold"
                android:id="@+id/third_hour_temp_tv"/>

            <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/third_hour_temp_tv"
            android:id="@+id/third_hour_iv" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_hour"
                android:textStyle="bold"
                android:id="@+id/fourth_hour_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fourth_hour_tv"
                android:text="@string/empty"
                android:textStyle="bold"
                android:id="@+id/fourth_hour_desc_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_below="@id/fourth_hour_desc_tv"
                android:textStyle="bold"
                android:id="@+id/fourth_hour_temp_tv"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/fourth_hour_temp_tv"
                android:id="@+id/fourth_hour_iv" />

        </RelativeLayout>
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/next_hour"-->
<!--            android:textStyle="bold"-->
<!--            android:id="@+id/second_hour_tv"/>-->
<!--        <ImageView-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:id="@+id/second_hour_iv" />-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/third_hour"-->
<!--            android:textStyle="bold"-->
<!--            android:id="@+id/third_hour_tv"/>-->
<!--        <ImageView-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:id="@+id/third_hour_iv" />-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textStyle="bold"-->
<!--            android:text="@string/fourth_hour"-->
<!--            android:id="@+id/fourth_hour_tv"/>-->
<!--        <ImageView-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:id="@+id/fourth_hour_iv" />-->
    </LinearLayout>

    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>